--- a/public/assets/css/support.css
+++ b/public/assets/css/support.css
@@ -450,6 +450,10 @@ select { -webkit-appearance: none; appearance: none; }
     margin-top: 60px;
 }
 
+#support-faq {
+    scroll-margin-top: 120px;
+}
+
 .faq-section h2 {
     text-align: center;
     font-size: 2.2rem;
